i18n: Fix Italian "result.mens" translation

--- a/src/translations/it.json
+++ b/src/translations/it.json
@@ -311,7 +311,7 @@
   "results.just-day-n": "Risultati per il giorno {N}",
   "results.lifter-disqualified": "DQ",
   "results.lifter-guest": "G",
-  "results.mens": "Ginocchiere + Fasce",
+  "results.mens": "Uomini",
   "results.merge-error-title": "Unisci errori",
   "results.merge-platform": "Unire giorno {day} pedana {platform}",
   "results.merge-platforms-card-header": "Unisci pedane",
