feat: implement platform monitor

--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -255,6 +255,7 @@
   "nav.flight-order": "Reihenfolge Durchlauf",
   "nav.home": "Startseite",
   "nav.lifting": "Wettkampf",
+  "nav.platform": "Plattform",
   "nav.meet-setup": "Wettkampf einrichten",
   "nav.registration": "Registrierung",
   "nav.results": "Ergebnisse",
