--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -255,6 +255,7 @@
   "nav.flight-order": "Flight Order",
   "nav.home": "Home",
   "nav.lifting": "Lifting",
+  "nav.platform": "Platform",
   "nav.meet-setup": "Meet Setup",
   "nav.registration": "Registration",
   "nav.results": "Results",
